--- a/config/config.json
+++ b/config/config.json
@@ -25,7 +25,7 @@
             "amsgrad": true
         }
     },
-    "loss": "nll_loss",
+    "loss": "cross_entropy_loss",
     "metrics": [
         "my_metric", "my_metric2"
     ],
