--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "n_gpu": 1,
     "keywords": ["yes", "no", "up", "down", "left", "right", "on", "off", "stop", "go"],
 
-    "arch": {
+    "model": {
         "type": "VanillaConv",
         "args": {}
     },
