first working version: weight loss loading fix & bce logit loss

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL files / cache
 __pycache__/
 *.py[cod]
 *$py.class
+.ipynb_checkpoints
 
 # input data, saved log, checkpoints
 data/
