--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ __pycache__/
 # input data, saved log, checkpoints
 data/
 saved/
+
+# report
+report/*.bbl
+report/*.aux
+report/*.log
+report/*.blg
